xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__case_as_any_uri.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'http://example.com' cast as xs:anyURI\")"
---
Ok(
    One(
        Atomic(
            AnyURI(
                "http://example.com",
            ),
        ),
    ),
)
