xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__case_as_language_fails.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'en us' cast as xs:language\")"
---
Err(
    FORG0001,
)
