xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_as_language.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'en' cast as xs:language\")"
---
Ok(
    One(
        Atomic(
            String(
                Language,
                "en",
            ),
        ),
    ),
)
