xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_as_ncname.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'foobar' cast as xs:NCName\")"
---
Ok(
    One(
        Atomic(
            String(
                NCName,
                "foobar",
            ),
        ),
    ),
)
