xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_as_nmtoken_fails.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'foo bar' cast as xs:NMTOKEN\")"
---
Err(
    FORG0001,
)
