xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_as_normalized_string.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'foo\\nbar' cast as xs:normalizedString\")"
---
Ok(
    One(
        Atomic(
            String(
                NormalizedString,
                "foo bar",
            ),
        ),
    ),
)
