xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_as_token.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"'  foo\\n\\nbar ' cast as xs:token\")"
---
Ok(
    One(
        Atomic(
            String(
                Token,
                "foo bar",
            ),
        ),
    ),
)
